2006-11-05  Carlos Garnacho  <carlosg@gnome.org>

	* Release 1.9.91

2006-11-03  Carlos Garnacho  <carlosg@gnome.org>

	* Shares/NFS.pm (get_share_client_info): logic was wrong when
	retrieving whether the share is rw/ro, invert it.
	* Network/Ifaces.pm (get_interface_parse_table): allow [*#] in phone
	numbers.

2006-10-31  Carlos Garnacho  <carlosg@gnome.org>

	* Shares/NFS.pm (share_line_matches): fix != SunOS case.

2006-10-26  Carlos Garnacho  <carlosg@gnome.org>

	* Release 1.9.90
	* message-of-doom: removed

2006-10-26  Carlos Garnacho  <carlosg@gnome.org>

	* Init/Services.pm: fixes for archlinux

2006-10-12  Carlos Garnacho  <carlosg@gnome.org>

	* configure.in: expand properly datadir and sysconfdir

2006-10-09  Carlos Garnacho  <carlosg@gnome.org>

	* Network/Ifaces.pm: don't corrupt wireless essid and key.

2006-10-06  Carlos Garnacho  <carlosg@gnome.org>

	* Release 1.9.7

2006-10-06  Carlos Garnacho  <carlosg@gnome.org>

	* IfacesConfig.pm, Network/Ifaces.pm: save/restore gateway settings
	for static interfaces.
	* configure.in: preemptively bump minor number.

2006-10-05  Carlos Garnacho  <carlosg@gnome.org>

	Ported to 1.9.x a huge and incredible patch by Darren Kenny  
	<Darren.Kenny@Sun.COM> and Erast Benson  <erast@gnusolaris.com> 
	to make s-t-b recognize and configure SunOS based systems.

	* Utils/Platform.pm: recognize OpenSolaris and Nexenta properly.
	* Utils/File.pm (read_joined_lines): added.
	* Users/Shells.pm, Users.pm, Groups.pm: add SunOS case paths.
	* Time/NTP.pm, TimeDate.pm: ditto.
	* Shares/NFS.pm: parse/modify dfstab in the SunOS case
	* Network/Hosts.pm, Ifaces.pm: add code to deal with SunOS network
	configuration.
	* Init/Services.pm: deal with SMF init system.

2006-10-02  Carlos Garnacho  <carlosg@gnome.org>

	* Utils/Parse.pm (escape): fix slight problem when $value has spaces.

2006-09-28  Carlos Garnacho  <carlosg@gnome.org>

	* Release 1.9.6

2006-09-28  Carlos Garnacho  <carlosg@gnome.org>
