@@ -1,3 +1,9 @@
+2006-11-14  Carlos Garnacho  <carlosg@gnome.org>
+
+	* Time/TimeDate.pm (get_timezone) (set_timezone): be prepared to
+	handle symlinks to the zoneinfo file, also save it as a link by
+	default. Fixes GNOME bug #354661.
+
 2006-11-05  Carlos Garnacho  <carlosg@gnome.org>
 
 	* Release 1.9.91
